# aoc

./: README.md  pyproject.toml
adventofcode/1/: generic.py  part2.py
adventofcode/2/: generic.py  part1.py  part2.py
adventofcode/day1/: part1.py
adventofcode/day10/: generic.py
adventofcode/day11/: generic.py
adventofcode/day14/: generic.py
adventofcode/day16/: generic.py
adventofcode/day17/: generic.py
adventofcode/day19/: generic.py
adventofcode/day20/: generic.py
adventofcode/day24/: generic.py
adventofcode/day3/: part1.py  part2.py
adventofcode/day4/: part1.py  part2.py
adventofcode/day5/: generic.py
adventofcode/day6/: generic.py
adventofcode/day8/: generic.py
adventofcode/day9/: generic.py
aoc2020/adventofcode/day1/: generic.py
aoc2020/adventofcode/day12/: part1.py  part2.py
aoc2020/adventofcode/day13/: generic.py
aoc2020/adventofcode/day14/: generic.py
aoc2020/adventofcode/day15/: generic.py
aoc2020/adventofcode/day18/: generic.py
aoc2020/adventofcode/day19/: generic.py
aoc2020/adventofcode/day2/: generic.py
aoc2020/adventofcode/day21/: generic.py
aoc2020/adventofcode/day22/: generic.py
aoc2020/adventofcode/day23/: generic.py
aoc2020/adventofcode/day25/: generic.py
aoc2020/adventofcode/day4/: part2.py
aoc2020/adventofcode/day5/: generic.py
aoc2020/adventofcode/day6/: generic.py
aoc2020/adventofcode/day7/: generic.py
aoc2021/: Cargo.toml
aoc2021/src/: day01.rs  day02.rs  lib.rs  main.rs
