[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = "Advent of code 2020 as a python package"
authors = ["Dan Rubin <dmrubin3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
